# Manifold-SAE

./: .gitignore  README.md  REPORT.md  REPORT_35B.md  WRITEUP.md  colab_run.txt  pyproject.toml
.github/workflows/: steering-server.yml
benchmarks/: scaling_bench.py  scaling_bench_cuda.py
concept_manifold_steering/: README.md  pyproject.toml
concept_manifold_steering/concept_manifold_steering/: __init__.py  diagnostics.py  gauge.py  harvest.py  steer.py
concept_manifold_steering/tests/: test_smoke.py
cross_llm_platform/: README.md  pyproject.toml
cross_llm_platform/cross_llm_platform/: __init__.py  atlas.py  cli.py  concepts.py  diagnostics.py  gauge.py  ingest.py  server.py  steer.py
cross_llm_platform/cross_llm_platform/tests/: test_platform.py
dashboard/: README.md  docker-compose.yml
dashboard/backend/: app.py  requirements.txt
dashboard/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
dashboard/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
dashboard/scripts/: build.sh  deploy.sh  dev.sh
dashboard/shared/: schema.py  schema.ts
dashboard/tests/: e2e.spec.ts  playwright.config.ts  test_backend.py
data/: DATA_MANIFEST.md  build_matrix.py
data/creditscope/: split_manifest.json  tier0.json
data/l17/: split_manifest.json  tier0.json
distributed_manifold_sae/: README.md  dashboard.py  loss.py
docs/: a100_results_2026_06_03.md  architecture.md  architecture_2d.md  cluster_session_2026_05_21.md  development.md  experiment_ideas.md  experiments.md  findings.md  gam_patches.md  gamfit_design.md  known_issues.md  publishing.md  results.md
experiments/: AUTO_EXP_PLAN.md  BSF_RESPONSE.md  DATA_README.md  HARVEST.md  W9_W10_SAC_BLOCKED.md  WS_F_RESULTS.md  __init__.py  _pca_basis.py  als_recover.py  amm_benchmark.py  analyze_color_geometry.py  analyze_color_token_position.py  analyze_manifold_shapes.py  analyze_manifold_topology.py  analyze_self_qualia_bank.py  analyze_self_qualia_compare.py  analyze_stats_manifold.py  analyze_steering_trajectory.py  analyze_trajectory_combined.py  animate_self_qualia_umap.py  atom_analysis.py  atom_causality.py  auto_03.py  auto_05.py  auto_08.py  auto_09.py  auto_10.py  auto_11.py  auto_13.py  auto_16.py  auto_18.py  auto_20.py  auto_21.py  auto_22.py  auto_27.py  auto_29.py  auto_34.py  auto_35.py  auto_39.py  auto_40.py  (+209 more)
experiments/amm_zoo/: .gitignore  README.md  amm.py  arms.py  metrics.py  msi.sbatch  run.py
experiments/bank_additions/: SCHEMA.md  add_clean_signal.jsonl  add_null_controls.jsonl  base_bank.jsonl  merge_bank.py
experiments/block_nursery/: REPORT.md  missed_circle_diagnosis.json  real_results.json  sample_complexity_smoke.json  synthetic_results.json
experiments/bsf_baseline/: REPORT.md  bsf.py  metrics.json  test_bsf.py  train.py
experiments/chart_transfer/: TEMPLATE_TRANSFER_REPORT.md  chart_transfer_frontier.py  chart_transfer_layers.py  harvest_templates.py  report_template_transfer.py  template_transfer.py
experiments/color_media/: README.md  datafreq_build.py  fig_umap_all.py  harmonic_sonify.py  huenote_plots.py  native_plot.py  synced_audio.py  synced_timeline.py  umap_movie2.py
experiments/dose_out/: dose_calibration.json  report.md
experiments/dose_real_out/: dose_calibration_real.json  report.md
experiments/encoder/: README.md  distill_harness.py  heimdall_submit.py  run_probe.py  run_real.py  run_synthetic.py  selftest_harness.py  summarize_reports.py  synth_dictionary.py
experiments/frontier_out/: report.md  results.json
experiments/frontier_probe_out/: curved_feature_probes.json  summary.md
experiments/gamfit_manifold/: gamfit_manifold_reml.csv  (+6 more)
heimdall_jobs/: README.md  fetch_results.sh  status.py  submit.py
manifold_sae/: INTEGRATION_NOTES.md  MAPPING.md  __init__.py  _cluster_bridge.py  adaptive_k.py  adaptive_k_v2.py  amortized_manifold_sae.py  cli.py  crm.py  crosscoder.py  cylinder_sae.py  cylinder_sae_shared.py  das_sae.py  data_synthetic.py  decoder.py  diagnostics.py  encoder.py  encoder_linear.py  equivariant.py  gamfit_glue.py  hyperbolic_sae.py  identifiable.py  integration.py  losses.py  matryoshka.py  metrics.py  sae.py  sae_2d.py  scale.py  sheaf.py  sindy_sae.py  sindy_sae_static.py  steering.py  train.py  transcoder.py  wasserstein_sae.py  wasserstein_sae_v2.py  wasserstein_sae_v3.py
scripts/: attribution_graph.py  build_color_probes_l40.py  build_semantic_atlas.py  gamfit_periodic_repro.py  harvest_behavioral_local.py  harvest_paired_l20_l40.py  harvest_qwen_small.py  harvest_sd_unet.py  phase0_notes.md  phase0_substrate.py  plot_duchon_conditioning.py  plot_duchon_diagnostics.py  run_autointerp.py  run_full_leaderboard.py  run_phate_atlas.py  run_self_qualia_32b_azure.sh  run_self_qualia_instruct_rich_azure.sh  run_steering_bench.py  synthesize_multilayer_cogito.py  synthesize_paired_layers.py  train_adaptive_k.py  train_adaptive_k_v2.py  train_behavioral_probes.py  train_crm.py  train_cylinder_sae.py  train_cylinder_shared.py  train_das_sae.py  train_das_sae_l1_monosemantic.py  train_hyperbolic_sae.py  train_matryoshka_cuda.py  train_sae_comparison.py  train_sae_f65k_cuda.py  train_sindy_synthetic_lorenz.py  train_universal_cogito_qwen.py  train_wasserstein_sae.py  train_wasserstein_sae_v2.py  train_wasserstein_sae_v3.py  verify_sparse_dispatch.py
slop/: README.md
tests/: __init__.py  conftest.py  test_adaptive_k.py  test_amm_sparse_scoring.py  test_amm_zoo_geometry.py  test_amortized_manifold_sae.py  test_autointerp.py  test_crm.py  test_crosscoder.py  test_cylinder_sae.py  test_das_sae.py  test_eval_harness.py  test_frontier.py  test_gamfit_glue.py  test_hyperbolic_sae.py  test_identifiable.py  test_integration.py  test_llm_autointerp.py  test_phate_atlas.py  test_report_35b_schema.py  test_sae_smoke.py  test_sparse_decode.py  test_steering_bench.py  test_synthetic.py  test_wasserstein_sae.py
tools/: aggregate_results.py  atom_traversal.py  feature_dashboard.py  final_report.py  make_writeup.py  plot_atom_compactness.py  plot_variant_sweep.py  poll_and_report.sh
(+543 files in other folders)
