[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manifold-sae"
version = "0.0.1"
description = "Sparse autoencoders whose features are smooth 1D curves in residual stream, with a vector-output GAM decoder wrapping gamfit's Gaussian REML primitive."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Scott Sauers" },
]
keywords = ["sparse-autoencoder", "interpretability", "gam", "reml", "mechanistic-interpretability"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # PyPI ships CUDA-13 wheels for torch 2.11+ (e.g. torch 2.11.0+cu130).
    # On a host with a CUDA-12 driver (the cluster's libcuda reports 12.9,
    # nodes' nvidia-smi advertises 13.0 but the driver runtime is older),
    # +cu130 wheels fail to initialize CUDA. Force the +cu128 wheel via
    # PyTorch's explicit index (see [[tool.uv.index]] below). Cap below
    # 2.12 to be extra safe.
    "torch>=2.2,<2.12",
    "numpy>=1.26",
    "tqdm>=4.66",
    "gamfit>=0.1.67",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
llm = [
    "transformers",
    "datasets",
    "accelerate",
    "safetensors",
]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["manifold_sae"]

# Torch on PyPI defaults to the CUDA-13 (+cu130) wheel which fails on
# hosts with a CUDA-12 driver. Force the +cu128 wheel via the explicit
# PyTorch index. To use a different CUDA variant (cpu / cu124 / cu130),
# either edit the URL below or override per-platform via
# `tool.uv.sources` with a marker.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
