[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concept_manifold_steering"
version = "0.1.0"
description = "Transferable HSV-style gauge-fix + anchor-offset steering recipe for LLM activation manifolds."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Manifold-SAE contributors" },
]
license = { text = "MIT" }
keywords = ["mechanistic-interpretability", "activation-steering", "llm", "manifold"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
hf       = ["torch>=2.0", "transformers>=4.40"]
plot     = ["matplotlib>=3.7"]
dev      = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["concept_manifold_steering*"]

[project.urls]
Source = "https://github.com/Sauers/Manifold-SAE"
